[Fix] -> Menu items vertical center alignment for both default wordpress menu and primary menu.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -2742,10 +2742,16 @@ body {
 
 .header-main-layout-1 .ast-main-header-bar-alignment {
   margin-left: auto;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
 }
 
 .header-main-layout-3 .ast-main-header-bar-alignment {
   margin-right: auto;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
 }
 
 #site-navigation {
